--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "78282827",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "pip install mediapipe"
+    "!pip install -r requirements.txt"
    ]
   },
   {
